Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

29-Apr-2010 Hannes Papenberg
# Fixed parameters in install SQL and sampledata from INI to JSON

29-Apr-2010 Christophe Demko
# Fixed warning deprecated function ereg in php 5.3 libraries/joomla/client/ftp.php
# Fixed warning date(): It is not safe to rely on the system's timezone settings (php 5.3). libraries/joomla/utilities/date.php

29-Apr-2010 Andrew Eddie
 # Fixed [#20102] Powered By 1.5 image

28-Apr-2010 Hannes Papenberg
# Fixed some bugs in beez 2.0 and added font - Thanks Angie Radtke!

28-Apr-2010 Jean-Marie Simonet
# Loading plg_user_profile ini in User edit.
$ Sorting com_users back-end in/keys

28-Apr-2010 Andrew Eddie
 + Accepted patch [#19659] JApplication::_create session() expires sessions on each page load and creates additional load (Dennis Hermacki)
 + Accepted patch [#19660] Database session handler optimization (Dennis Hermacki)
 # Fixed [#20231] You can save two default menu items

27-Apr-2010 Mark Dexter
# Make sure archive is consistently value = 2 (Elin Waring)
# Update search plugins (Elin Waring)
# Sample data fixes (Elin Waring)
# String for templates view (Elin Waring)
# ACL for editing template files; mark the link to the template view (Elin Waring)
# Fix order in components (Elin Waring)

27-Apr-2010 Jean-Marie Simonet
$ Refactoring com_users back-end in/keys

27-Apr-2010 Christophe Demko
# Fixed [#20116] Administrator com_banners cannot select banner image
# Fixed [#18510] Category Manager / New + Edit Category: Image Attribute has no Browse button
# Fixed [#20236] Editing of template fiies is not working
# Fixed [#18561] Ftp find path and verify setting in installation

27-Apr-2010 Andrew Eddie
 # Fixed [#20223] Custom Code in Banner system is not saved / not used.
