@@ -46,11 +46,11 @@ COM_LANGUAGES_FIELD_TITLE_NATIVE_DESC="Title in Native language"
 COM_LANGUAGES_FIELD_TITLE_NATIVE_LABEL="Title Native"
 COM_LANGUAGES_FIELD_ALIAS_LABEL="Alias"
 COM_LANGUAGES_FIELD_ALIAS_DESC="COM_LANGUAGES_FIELD_ALIAS_DESC do we need this field?"
+COM_LANGUAGES_GROUP_LABEL_METADATA_OPTIONS="Metadata Options"
 
 COM_LANGUAGES_CONFIGURATION="Language Manager Options"
 COM_LANGUAGES_ERR_DELETE="Select a language to delete"
 COM_LANGUAGES_ERR_PUBLISH="Select a language to publish"
-COM_LANGUAGES_ERROR_NO_TITLE="The language should have a title"
 
 COM_LANGUAGES_NO_LANGUAGES_SELECTED="No languages selected"
 COM_LANGUAGES_N_ITEMS_DELETED="%d languages successfully deleted"
