@@ -561,6 +561,8 @@ JLIB_DATABASE_ERROR_ORDERUP_FAILED="%s::orderUp Failed - %s"
 JLIB_DATABASE_ERROR_REBUILD_FAILED="%s::rebuild Failed - %s"
 JLIB_DATABASE_ERROR_REBUILDPATH_FAILED="%s::rebuildPath Failed - %s"
 JLIB_DATABASE_ERROR_ROOT_NODE_NOT_FOUND="Root node not found."
+JLIB_DATABASE_ERROR_LANGUAGE_NO_TITLE="The language should have a title"
+
 JLIB_DOCUMENT_ERROR_UNABLE_LOAD_DOC_CLASS="Unable to load document class"
 JLIB_ENVIRONMENT_SESSION_EXPIRED="Your session has expired. Please log in again."
 JLIB_ERROR_INFINITE_LOOP="Infinite loop detected in JError"
