@@ -6,7 +6,9 @@
  */
 
 // No direct access
-defined('_JEXEC') or die;
+defined('JPATH_BASE') or die;
+
+jimport('joomla.database.table');
 
 /**
  * Languages table.
@@ -46,11 +48,25 @@ class JTableLanguage extends JTable
 	public $title_native;
 
 	/**
-	 * A description for the langauge.
+	 * A description for the language.
 	 *
 	 * @var	varchar
 	 */
 	public $description;
+
+	/**
+	 * A Meta Description for the language.
+	 *
+	 * @var	varchar
+	 */
+	public $metadesc;
+
+	/**
+	 * The Meta keywords for the language.
+	 *
+	 * @var	varchar
+	 */
+	public $metakey;
 
 	/**
 	 * The published state of the language.
@@ -77,7 +93,7 @@ class JTableLanguage extends JTable
 	public function check()
 	{
 		if (trim($this->title) == '') {
-			$this->setError(JText::_('COM_LANGUAGES_ERROR_NO_TITLE'));
+			$this->setError(JText::_('JLIB_DATABASE_ERROR_LANGUAGE_NO_TITLE'));
 			return false;
 		}
 
