@@ -1,0 +1,48 @@
+<?php
+/**
+ * @version		$Id$
+ * @copyright	Copyright (C) 2005 - 2010 Open Source Matters. All rights reserved.
+ * @license		GNU General Public License version 2 or later; see LICENSE.txt
+ */
+
+require_once JPATH_BASE.'/libraries/joomla/database/table/language.php';
+
+/**
+ * Test class for JTableMenu.
+ * Generated by PHPUnit on 2009-10-08 at 22:07:26.
+ */
+class JTableLanguageTest extends PHPUnit_Framework_TestCase {
+	/**
+	 * @var	JTableUser
+	 * @access protected
+	 */
+	protected $object;
+
+	/**
+	 * Sets up the fixture, for example, opens a network connection.
+	 * This method is called before a test is executed.
+	 *
+	 * @access protected
+	 */
+	protected function setUp() {
+		//$this->object = new JTableLanguage;
+	}
+
+	/**
+	 * Tears down the fixture, for example, closes a network connection.
+	 * This method is called after a test is executed.
+	 *
+	 * @access protected
+	 */
+	protected function tearDown() {
+	}
+
+	/**
+	 * @todo Implement testCheck().
+	 */
+	public function testCheck() {
+		// Remove the following lines when you implement this test.
+		$this->markTestIncomplete('This test has not been implemented yet.');
+	}
+}
+?>
