@@ -31,6 +31,7 @@ $ -> Language fix or change
 # Fixed parameters in install SQL and sampledata from INI to JSON
 
 29-Apr-2010 Christophe Demko
++ Add metadesc and metakey fields to the #__language table (http://groups.google.com/group/joomla-dev-cms/browse_thread/thread/828869eb50004b97)
 # Fixed warning deprecated function ereg in php 5.3 libraries/joomla/client/ftp.php
 # Fixed warning date(): It is not safe to rely on the system's timezone settings (php 5.3). libraries/joomla/utilities/date.php
 
